bugfix: grid menu IE layout bug. switch to flexbox for container  #SA-214 #time 10m

--- a/src/common/components/grid/grid-menu/index.scss
+++ b/src/common/components/grid/grid-menu/index.scss
@@ -4,6 +4,7 @@
   left: 0;
   width: 100%;
   z-index: 1;
+  display: flex;
   @include scale-prop(height, 80);
   color: #fff;
   user-select: none;
